--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,22 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+/* :root { */
+  /* --background: #ffffff;
+  --foreground: #171717; */
+/* } */
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  /* Brand */
+  --color-primary: #BBB791;
+  --color-secondary: #A8C3BC;
+  --color-accent: #FFFFC5;
+
+  /* Surfaces */
+  --color-foreground: #4A4A3F;
+  --color-background: #F1E9D2;
+  /* --color-background: var(--background);
+  --color-foreground: var(--foreground); */
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -20,7 +29,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-background);
+  color: var(--color-foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
